--- a/mainpage.dox
+++ b/mainpage.dox
@@ -49,7 +49,13 @@ It is also possible to have some outputs formatted in vtk file format, usefull t
 ### scalfmm settings for feellgood
 feellgood uses double precision to compute demagnetizing field through scalfmm. It is directly set through a template parameter for most scalfmm calls.
 
-By default, scalfmm is set to use Advance Vector Extensions (AVX) assembler instruction sets to fasten some computations. It should be set to OFF in scalfmm_config.h to use the SSE 4.2 assembler instruction sets, parameter USEsse4.2 set to ON in scalfmm_config.h file. <br>
+By default, scalfmm is set to use Advance Vector Extensions (AVX) assembler instruction sets to fasten some computations. It should be set off in /usr/local/include/ScalFmmConfig.h to use the SSE 4.2 assembler instruction sets, and AVX set to off.
+You should have that line in ScalFmmConfig.h for SCALFMM_USE_SSE in the SSE section: <br>
+
+\#define SCALFMM_USE_SSE <br>
+
+And everything commented in the AVX section.
+
 
 
 */
