--- a/mainpage.dox
+++ b/mainpage.dox
@@ -12,7 +12,7 @@ This non-linear partial derivative equation is solved using finite element metho
 \f$ A \f$ is the exchange energy constant, \f$ M_s \f$ is the magnetization at saturation of the considered material. \f$ E_{an} \f$ is the anisotropy energy contribution. \f$ \mathbf{H}_a \f$
 is the external applied field.
 The demagnetizing field \f$ \mathbf{H}_d = -\frac{1}{4 \pi} \int_V \nabla \cdot \mathbf{m} \frac{\mathbf{r}}{r^3} dV \f$ is computed using fast multipole algorithm, implemented in the external library scalfmm.
-Material parameters are given to feellgood solver through the mesh file.
+See online documentation for more details about all parameters required for a complete simulation.
 
 ## Installation & configuration
 
@@ -20,29 +20,17 @@ Installation of feellgood recquires the library ANN, the scalfmm, and GMM++.
 To compile and link feellgood, a CMakeLists.txt is provided.
 
 ### how to compile
-C++ 11 for feellgood source, C++ 14 for scalfmm, C++ 11 for GMM++ and ANN
-Some options are given to the compiler, to create a macro within feellgood source code:
-
-* - -DORD1 : first order integration scheme (debug mode)
-* - -DORD2 : second order integration scheme (default & release modes)
-* - -DNDEBUG
-* - -DNSTAT : some statistics (histogram), requires GSL
-
-These other options should not be modified: <br>
-* - -fopenmp for multiThreading with Open MP : usefull for scalfmm
-* - -std=c++11
-* - -ffast-math
-* - -msse4.2
-* - -mfpmath=sse
-* - -O2 or -O3 for optimizations
-
+C++ 11 for feellgood source
+C++ 14 for scalfmm
+C++ 11 for GMM++
+C++ 98 for ANN
 
 ### about the mesh
 The mesh must be tetrahedrons in .msh format, the software gmsh can build such a mesh file.
 At the end of the .msh file, a section is to be added to describe your material in adequation with the numbering system region of gmsh. \f$ M_s \f$, \f$ \alpha \f$, and other parameters such as anisotropy constants are provided here.
 
 ### output files
-The outputs are text files, tab separated value. It is composed of columns for \f$ (x,y,z) \f$ positions, \f$ (m_x,m_y,m_z) \f$, potential \f$ \phi \f$ <br>
+The outputs are text files, tab separated value. See online documentation for more informations.
 It is also possible to have some outputs formatted in vtk file format, usefull to visualize datas in paraview.
 
 ### scalfmm settings for feellgood
