more doxygen on time integration + links

--- a/mainpage.dox
+++ b/mainpage.dox
@@ -39,7 +39,7 @@ digraph "FeeLLGood inner workflow"
     }
 \enddot
 
-Within the settings, a mesh and all the micromagnetic parameters are provided. The mesh must be a tetraedron first order mesh, it is read once to prepare `element matrices`, related to each element objects, namely triangular facettes and the tetraedrons. FeeLLGood does not handle any other kind of mesh. At time t=0, the initial magnetization field values are set, either from .sol file or using a math expression. The external applied field \f$ \mathbf{H}_a \f$ might be time dependant. All material parameters defining exchange and anisotropy are used as inputs for the computation of the corresponding fields (arrow dismissed here for readability). The various field contributions are computed in each tetraedron object, except demagnetization field computed in class \ref scal_fmm::fmm. The small dense element matrices are used to build a 2N×2N sparse set of equations. It is solved using a stabilized bi-conjugate gradient algorithm.
+Within the settings, a mesh and all the micromagnetic parameters are provided. The mesh must be a tetraedron first order mesh, it is read once to prepare `element matrices`, related to each element objects, namely triangular facettes and the tetraedrons. FeeLLGood does not handle any other kind of mesh. At time t=0, the initial magnetization field values are set, either from .sol file or using a math expression. The external applied field \f$ \mathbf{H}_a \f$ might be time dependant. All material parameters defining exchange and anisotropy are used as inputs for the computation of the corresponding fields (arrow dismissed here for readability). The various field contributions are computed in each tetraedron object, except demagnetization field computed in class \ref scal_fmm::fmm. The small dense element matrices are used to build a 2N×2N sparse set of equations. It is solved using a stabilized bi-conjugate gradient algorithm, embedded in class \ref LinAlgebra. Time integration  of the whole micromagnetic problem is using an adaptative time step procedure, handled by function time_integration and class \ref TimeStepper.
 
 ## Input and output files
 Input settings should be written in a json or yaml text file, following the online documentation. They feed the class Settings.
